--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,12 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    //Datastore
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
+    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+
+    //lottie
+    implementation "com.airbnb.android:lottie:5.0.3"
+
 }
