--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-kapt'
     id "androidx.navigation.safeargs.kotlin"
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -97,5 +98,5 @@ dependencies {
 
     //lottie
     implementation "com.airbnb.android:lottie:5.0.3"
-
+    implementation platform('com.google.firebase:firebase-bom:29.3.0')
 }
