UI UX fixes and structure change

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,17 +16,15 @@
         <activity
             android:name=".ui.AuthActivity"
             android:exported="true">
-            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.MainActivity"
-            android:exported="false"
-            android:label="@string/app_name">
+        <activity android:name=".ui.MainActivity"
+            android:theme="@style/AppTheme.TransparentTheme"
+            android:exported="false">
         </activity>
     </application>
 
